<resources>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_remember_me_checkbox">Remember me</string>
    <string name="login_login_button">LOG IN</string>
    <string name="login_no_account_text">Do not have an account?</string>
    <string name="login_register_button">Register</string>
    <string name="empty_credentials_error">Credentials cannot be empty</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="loading">Loading...</string>
    <string name="permission_error">Cannot load data without this permissions</string>
    <string name="menu_map">Map</string>
    <string name="menu_nearest">Find nearest</string>
    <string name="menu_account">Account</string>
    <string name="vehicle_registration">registration:</string>
    <string name="vehicle_range">range:</string>
    <string name="vehicle_distance">distance:</string>
    <string name="walk_time">walk time:</string>
    <string name="vehicle_number">number:</string>
    <string name="choose_vehicle">Choose vehicle</string>
    <string name="find_nearest_button_text">Find nearest</string>
    <string name="reserve_button_text">Reserve</string>
    <string name="start_rental_button_text">Rent</string>
    <string name="end_rental_button_text">Finish</string>
    <string name="dash">-</string>
    <string name="cancel">Cancel</string>
    <string name="time">time:</string>
    <string name="cost">cost:</string>
    <string name="sending_request">Sending request...</string>
    <string name="rental_summary">Rental summary</string>
    <string name="summary_cost_description">Cost:</string>
    <string name="zl">zł</string>
    <string name="summary_distance_description">Distance:</string>
    <string name="km">km</string>
    <string name="summary_time_description">Time:</string>
    <string name="min">min</string>
    <string name="ok">Ok</string>
    <string name="registration_name">Name</string>
    <string name="registration_surname">Surname</string>
    <string name="registration_street">Street</string>
    <string name="registration_number">Number</string>
    <string name="registration_post_code">Post code</string>
    <string name="registration_city">City</string>
    <string name="registration_pesel">PESEL</string>
    <string name="registration_id_card_number">ID Card number</string>
    <string name="registration_id_expiry_date">Expiry date</string>
    <string name="registration_email">Email</string>
    <string name="registration_phone_number">Phone number</string>
    <string name="registration_password">Password</string>
    <string name="registration_repeat_password">Repeat password</string>
    <string name="registration_checkbox_terms">I accept terms of service and I am aware of my responsibility for giving false information.</string>
    <string name="registration_register_button">Register</string>

    <string name="state_preview">Vehicles preview</string>
    <string name="state_reservation">Active reservation</string>
    <string name="state_rental">Active rental</string>
    <string name="payment_card_number">Payment card number</string>
    <string name="registration_payment_card_expiry_date">Expiry date</string>
    <string name="registration_ccv">CCV</string>
    <string name="location_not_available">Location is not available</string>
    <string name="registration_success">Registration success. Log in now!</string>
    <string name="edit_data">Edit data</string>
    <string name="save_changes">Save changes</string>
    <string name="account_save_data_success">Data saved successfully.</string>
    <string name="nfc_off_info">Turn on NFC to make rental start possible!</string>
    <string name="scanning">Scanning...</string>
    <string name="scanning_info">Scan NFC code on your vehicle to start rental.</string>


</resources>
