<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.thirteendollars.singlerent.data.model.Vehicle"/>
        <import type="android.view.View"/>
        <import type="com.thirteendollars.singlerent.main.map.MapViewModel.MapMode"/>
        <variable
            name="mapViewModel"
            type="com.thirteendollars.singlerent.main.map.MapViewModel"
            />
    </data>

<LinearLayout android:id="@+id/vehicle_info_bottom_sheet"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:clickable="true"
    android:focusable="true"
    app:behavior_hideable="false"
    app:behavior_peekHeight="48dp">

    <LinearLayout
        android:id="@+id/vehicle_bottom_sheet_header_layout"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vehicle_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@{ mapViewModel.selectedVehicle.type==null ? @drawable/ic_touch : (mapViewModel.selectedVehicle.type==Vehicle.Type.BICYCLE ? @drawable/pin_bike : @drawable/pin_motorcycle) }"
            />

        <TextView
            android:id="@+id/vehicle_name"
            style="@style/HeaderText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@{mapViewModel.selectedVehicle.get().name ?? @string/choose_vehicle}"
            />

        <ImageView
            android:id="@+id/vehicle_info_bottom_show__hide_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="6dp"
            android:src="@{mapViewModel.vehicleBottomSheetHidden ? @drawable/ic_up : @drawable/ic_down}"
            android:onClick="@{()-> mapViewModel.onVehicleBottomSheetShowHide()}"
            />
    </LinearLayout>



    <android.support.constraint.ConstraintLayout
        android:id="@+id/vehicle_info_bottom_sheet_main_content"
        android:visibility="@{mapViewModel.selectedVehicle==null ? View.GONE : View.VISIBLE}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_image"
        app:layout_constraintBottom_toTopOf="@+id/vehicle_bottom_sheet_button"
        >
        <LinearLayout
            android:id="@+id/vehicle_number_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/vehicle_number_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_number" />

            <TextView
                android:id="@+id/vehicle_number"
                android:text="@{``+mapViewModel.selectedVehicle.id }"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_range_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/vehicle_range_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_range" />

            <TextView
                android:id="@+id/vehicle_range"
                android:text="@{mapViewModel.selectedVehicle.rangeKm.toString() ?? @string/dash}"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_distance_layout"
            android:visibility="@{mapViewModel.distanceToVehicle==null ? View.GONE : View.VISIBLE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_number_layout">

            <TextView
                android:id="@+id/vehicle_distance_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_distance" />

            <TextView
                android:id="@+id/vehicle_distance"
                android:text="@{String.format(`%.2fkm`,mapViewModel.distanceToVehicle)}"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_walk_time_layout"
            android:visibility="@{mapViewModel.walkTimeToVehicle==null ? View.GONE : View.VISIBLE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_range_layout">

            <TextView
                android:id="@+id/vehicle_walk_time_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walk_time" />

            <TextView
                android:id="@+id/vehicle_walk_time"
                android:text="@{String.format(`%dmin`,mapViewModel.walkTimeToVehicle)}"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_time_layout"
            android:visibility="@{mapViewModel.rentalTime==null ? View.GONE : View.VISIBLE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_number_layout">

            <TextView
                android:id="@+id/vehicle_time_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/vehicle_time_left"
                android:text="@{String.format(`%dmin %02ds`,mapViewModel.rentalTime/60,mapViewModel.rentalTime%60)}"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_cost_layout"
            android:visibility="@{mapViewModel.rentalCost==null ? View.GONE : View.VISIBLE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_range_layout">

            <TextView
                android:id="@+id/vehicle_cost_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost" />

            <TextView
                android:id="@+id/vehicle_cost"
                android:text="@{String.format(`%.2fzł`,mapViewModel.rentalCost)}"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/vehicle_bottom_sheet_cancel_button"
            android:visibility="@{mapViewModel.mapMode==MapMode.RESERVATION ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cancel"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:onClick="@{()-> mapViewModel.onVehicleBottomSheetCancelButton()}"
            />


        <Button
            android:id="@+id/vehicle_bottom_sheet_main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@{ mapViewModel.mapMode==MapMode.PREVIEW ? @string/find_nearest_button_text : (mapViewModel.mapMode==MapMode.PREVIEW_MARKER_CLICKED ? @string/reserve_button_text : (mapViewModel.mapMode==MapMode.RESERVATION ? @string/start_rental_button_text : @string/end_rental_button_text))}"
            android:onClick="@{()-> mapViewModel.onVehicleBottomSheetMainButton()}"
            />

    </LinearLayout>




</LinearLayout>
</layout>